Modificacion archivos y subida imagen

--- a/index.html
+++ b/index.html
@@ -54,15 +54,25 @@
 <br>
 <br>
 
+<div class="container" align="center">
+     <img src="photo.jpg" class="rounded-circle" alt="Cinque Terre" width=30% align="center"> 
+</div>
+
+<br>
+<br>
 
 <!-------------------- Formulario --------------------------------->
-<div class="container">
+<div class="container" align="center">
+  <div style="background-color:black">
     <div class="col-md-9 mb-md-0 mb-5">
+      <br>     
             <form id="contact-form" name="contact-form" action="mail.php" method="POST">
                 <!--Grid row-->
                 <div class="row">
                     <!--Grid column-->
+
                     <div class="col-md-6">
+                      
                         <div class="md-form mb-0">
                             <input type="text" id="name" name="name" class="form-control">
                             <label for="name" class="">Your name</label>
@@ -86,7 +96,7 @@
                     </div>
                 </div>
                 <div class="text-center text-md-left">
-                        <a style="background-color:#ffe628; class="btn btn-primary" onclick="document.getElementById('contact-form').submit();">Send</a>
+                        <a style="background-color:#ffe628; align="center" class="btn btn-primary" onclick="document.getElementById('contact-form').submit();">Send</a>
                 </div>
             </form>
             
