--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 <br>
 <br>
 
+<!-------------------- Imagen --------------------------------->
 <div class="container" align="center">
      <img src="photo.jpg" class="rounded-circle" alt="Cinque Terre" width=30% align="center"> 
 </div>
